[project]
name = "sts-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julius Juodagalvis", email = "julius.juodagalvis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sts-env = "sts_env:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cmake>=4.3.1",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "pytest>=9.0.3",
]
